--- a/flight/targets/revolution/fw/Makefile.osx
+++ b/flight/targets/revolution/fw/Makefile.osx
@@ -24,7 +24,7 @@
 #####
 
 WHEREAMI := $(dir $(lastword $(MAKEFILE_LIST)))
-TOP      := $(realpath $(WHEREAMI)/../../../)
+TOP      := $(realpath $(WHEREAMI)/../../../../)
 
 override THUMB :=
 include $(TOP)/make/firmware-defs.mk
